# syncchat

./: .gitignore  CMakeLists.txt  Makefile  README.md  clear.sh  run_demo_server.sh
client/: .gitignore  client.pro  clienttypes.h  dialogaddfriend.cpp  dialogaddfriend.h  dialogaddfriend.ui  dialogcomments.cpp  dialogcomments.h  dialogcomments.ui  dialogcreategroup.cpp  dialogcreategroup.h  dialogcreategroup.ui  dialogeditmoment.cpp  dialogeditmoment.h  dialogeditmoment.ui  dialogfindbyusername.cpp  dialogfindbyusername.h  dialogfindbyusername.ui  dialogjoingroup.cpp  dialogjoingroup.h  dialogjoingroup.ui  dialogmoments.cpp  dialogmoments.h  dialogmoments.ui  dialogreconnect.cpp  dialogreconnect.h  dialogreconnect.ui  dialogsignup.cpp  dialogsignup.h  dialogsignup.ui  main.cpp  mainmanager.cpp  mainmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycontent.cpp  mycontent.h  myglobal.cpp  myglobal.h  (+26 more)
demo/: .gitignore  ca.pem  dh2048.pem  server.pem
include/: base.h  cppbase.h  dbop.h  escape.h  mychrono.h  myrandom.h  odbc.h  odbcbase.h  sqlext_compatible.h  sslbase.h  types.h
server/: .gitignore  Makefile
server/include/: mydb.h  session.h  sessionbase.h  srvtypes.h  sslio.h
server/src/: main.cpp  mydb.cpp  session.cpp  sessionbase.cpp  sessiondispatch.cpp  sessionfriend.cpp  sessiongrp.cpp  sessiongrpmsg.cpp  sessionlogin.cpp  sessionmoment.cpp  sessionmsg.cpp  sessionuser.cpp  sslio.cpp
src/: cppbase.cpp  escape.cpp  myrandom.cpp  odbc.cpp  odbcbase.cpp
